--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -1,15 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
-    
+    ViewData["Title"] = "Home Page";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <title>InstaChat</title>
-</head>
-<body>
+<div class="row">
     <h1>Hello Carlos, Luther, Andrew, Sean, and all the dogs.</h1>
-</body>
-</html>
+    <div class="col-md-12">
+        <h2>Welcome to the Auth0 ASP.NET Core MVC Starter Project</h2>
+        <p>To follow along in building this sample please <a href="https://auth0.com/docs/quickstart/webapp/aspnet-core">refer to the Quickstart</a>.
+    </div>
+</div>
