Changed home button text to instahub

--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <nav >
         <div >
             <div >
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SampleMvcApp</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" >InstaHub</a>
             </div>
             <div >
                 <ul >
