SetuP almost done

--- a/InstaHub-MVC/InstaHub-MVC/Views/Account/AccessDenied.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Account/AccessDenied.cshtml
@@ -6,3 +6,9 @@
     <h1 class="text-danger">Access Denied.</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
+
+<div>
+    <nav>
+        <a class="btn btn-primary btn-lg" role="button" asp-controller="" asp-action="">Back to InstaHub</a>
+    </nav>
+</div>
