--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -1,7 +1,35 @@
-﻿
+﻿@using InstaHub_MVC.Models;
+@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<ApplicationUser> SignInManager
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
 }
 <div class="row">
     <h1>Hello Carlos, Luther, Andrew, Sean, and all the dogs.</h1>
 </div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Landing Chat Page</title>
+</head>
+<body>
+
+    <h1 class="display-4">Welcome to InstaHub</h1>
+    <header class="main-header">
+        <div class="jumbotron jumbotron-fluid">
+            @if (!SignInManager.IsSignedIn(User))
+            {
+                <a asp-controller="Account" asp-action="Register">Register</a>
+                <a asp-controller="Account" asp-action="Login">Login</a>
+            }
+            else
+            {
+                <a asp-controller="Cart" asp-action="Index">View Cart</a>
+                <a asp-controller="Product" asp-action="Products">View Products</a>
+            }
+        </div>
+    </header>
+
+</body>
+</html>
