--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -15,14 +15,15 @@
                 <ul >
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 </ul>
-                <ul >
+                <ul>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li><a  asp-controller="Account" asp-action="Logout">Logout</a></li>
+                        <li><a asp-controller="Account" asp-action="Logout">Logout</a></li>
                     }
                     else
                     {
-                        <li><a  asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li><a asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li><a asp-controller="Account" asp-action="ExternalLogin">External Login</a></li>
                     }
                 </ul>
             </div>
