--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@*@using InstaHub_MVC.Models;
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<ApplicationUser> SignInManager*@
+
 @{
     ViewData["Title"] = "Home Page";
 }
