--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -2,29 +2,17 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div class="row">
-    <h1>Hello Carlos, Luther, Andrew, Sean, and all the dogs.</h1>
-    <div class="container">
-        <div class="row">&nbsp;</div>
-        <div class="row">
-            <div class="col-6">&nbsp;</div>
-            <div class="col-6">
-                User..........<input type="text" id="userInput" />
-                <br />
-                Message...<input type="text" id="messageInput" />
-                <input type="button" id="sendButton" value="Send Message" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <hr />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">&nbsp;</div>
-            <div class="col-6">
-                <ul id="messagesList"></ul>
-            </div>
-        </div>
-    </div>
+
+<div class="ui comments">
+    <input type="button" id="joinGroup" value="Join Private Group" />
 </div>
+
+<textarea name="message" id="message"></textarea>
+<select id="group">
+    <option value="All">Everyone</option>
+    <option value="Myself">Myself</option>
+    <option value="PrivateGroup">Private Group</option>
+</select>
+<input type="button" id="sendButton" value="Send Message" />
+
+<div id="messages"></div>
