--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     else
                     {
                         <a class="item" asp-controller="Account" asp-action="Login">Login</a>
-                        <a class="item" asp-controller="Account" asp-action="ExternalLogin">External-Login</a>
+                        @*<a class="item" asp-controller="Account" asp-action="ExternalLogin">External-Login</a>*@
                         <a class="item" asp-controller="Account" asp-action="Register">Register</a>
                     }
                 </div>
