--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -1,15 +1,50 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - InstaHub</title>
-        <link rel="stylesheet" type="text/css" href="~/css/semantic.min.css">
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - InstaHub</title>
+    <link rel="stylesheet" type="text/css" href="~/css/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        #wrapper {
+            min-height: 100%;
+            position: relative;
+        }
+
+        .spacer {
+            width: 225px;
+        }
+
+        #footer {
+            width: 100%;
+            height: 60px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            padding-right: 25px;
+        }
+
+        .pusher {
+            padding-left: 225px;
+            padding-right: 25px;
+        }
+
+        #navLinkBar {
+            padding-left: 220px;
+        }
+    </style>
+</head>
     <body>
         <nav>
             <div class="ui inverted menu">
-                <div class="ui inverted menu">
+                <div id="navLinkBar" class="ui inverted menu" >
                     <a class="active item" asp-controller="Home" asp-action="Index">Home</a>
                     @if (User.Identity.IsAuthenticated)
                     {
