--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
         <div id="messages">
             <div class="ui message">
                 <p>
-                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum.
+                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> This is changed to english because Andrew Q failed Latin in high school!!
                 </p>
             </div>
         </div>
