--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -77,5 +77,11 @@
         <script src="~/js/semantic.min.js"></script>
         <script src="~/lib/signalr/dist/browser/signalr.js"></script>
         <script src="~/js/chat.js"></script>
+        <script>
+            $(document).ready(function () {
+                $('.ui.longer.modal')
+                    .modal('show');
+            });
+        </script>
     </body>
 </html>
