added ability to save and get all messages for general

--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
 
 <div id="wrapper">
-    <div class="ui sidebar inverted vertical menu visible">
+    <div class="ui sidebar inverted vertical menu visible" id="dmContainer">
         <a class="header item">
             Channels
         </a>
