updated readme and index

--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
 
 <div id="wrapper">
-    <div class="ui sidebar inverted vertical menu visible">
+    <div class="ui sidebar inverted vertical menu visible" id="dmContainer">
         <a class="header item">
             Channels
         </a>
@@ -59,7 +59,7 @@
         <div id="messages">
             <div class="ui message">
                 <p>
-                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> This is changed to english because Andrew Q failed Latin in high school!!
+                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> !InstaHub Chat!
                 </p>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="ui fluid action input">
                 <div class="spacer"></div>
                 <input type="text" name="message" id="message" placeholder="Message #general"/>
-                <div class="ui button" id="sendButton" >Send Message</div>
+                <div class="ui button" id="sendButton">Send Message</div>
             </div>
         </div>
 
