--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
 
             <div class="ui fluid action input">
                 <div class="spacer"></div>
-                <input type="text" name="message" id="message" placeholder="Message #general"/>
+                <input type="text"  onkeypress="if (event.keyCode === 13) { document.getElementById(`sendButton`).click(); }" name="message" id="message" placeholder="Message #general"/>
                 <div class="ui button" id="sendButton">Send Message</div>
             </div>
         </div>
