edits made to family

--- a/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Home/Index.cshtml
@@ -27,13 +27,14 @@
             Channels
         </a>
         <a class="item">
-            #general
+            #Family Channel
         </a>
+        <!--
+    <a class="item">
+        #private channel coming soon
+    </a>-->
         <a class="item">
-            #random
-        </a>
-        <a class="item">
-            #support
+            #support...just txt carlos for now
         </a>
 
         <div class="ui horizontal divider">
@@ -44,7 +45,7 @@
             Direct Messages
         </a>
         <a class="item">
-            slackbot
+            slackbot (coming soon)
         </a>
 
     </div>
@@ -59,7 +60,7 @@
         <div id="messages">
             <div class="ui message">
                 <p>
-                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> !InstaHub Chat!
+                    <img class="ui avatar image" src="https://wths.hope.edu/wp-content/uploads/2017/04/profile-placeholder.png"> Top of Chat.  &#161;HOLA!
                 </p>
             </div>
         </div>
