adding logout page and edit ligin

--- a/InstaHub-MVC/InstaHub-MVC/Views/Account/Login.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿<h1>fdasfadsfdsfdsa</h1>
+﻿<h1>Login</h1>
 
 @model InstaHub_MVC.Models.ViewModels.LoginUser
 @using Microsoft.AspNetCore.Identity;
