Somewhat working.  Just logout is a problem

--- a/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Logout</title>
+</head>
+<body>
+    <h1 class="display-4">You have Successfully Loged Out</h1>
+    <h2>Thanks for chatting</h2>
+    <h6>More work to come.</h6>
+
+    <div>
+        <nav>
+            <a class="btn btn-primary btn-lg" role="button" asp-controller="Home" asp-action="Index">Back to Login</a>
+        </nav>
+    </div>
+
+
+</body>
+</html>
