working on logout

--- a/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
@@ -5,7 +5,7 @@
     <title>Logout</title>
 </head>
 <body>
-    <h1 class="display-4">You have Successfully Loged Out</h1>
+    <h1 class="display-4">You have Successfully Logged Out</h1>
     <h2>Thanks for chatting</h2>
     <h6>More work to come.</h6>
 
