--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -48,7 +48,8 @@
                     <a class="active item" asp-controller="Home" asp-action="Index">Home</a>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <a class="item" asp-controller="Account" asp-action="Logout">Logout</a>
+                        //<a class="item" asp-controller="Account" asp-action="Logout">Logout</a>
+                        <a class="item" asp-controller="Home" asp-action="Index">Logout</a>
                     }
                     else
                     {
