transfer to master then azure

--- a/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Account/Logout.cshtml
@@ -1,4 +1,13 @@
-﻿
+﻿<h1>Logout</h1>
+
+@model InstaHub_MVC.Models.ViewModels.LoginUser
+@using Microsoft.AspNetCore.Identity;
+@using InstaHub_MVC.Models;
+@inject SignInManager<ApplicationUser> SignInManager
+@{
+}
+
+
 <!DOCTYPE html>
 <html>
 <head>
