--- a/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
+++ b/InstaHub-MVC/InstaHub-MVC/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         //<a class="item" asp-controller="Account" asp-action="Logout">Logout</a>
-                        <a class="item" asp-controller="Home" asp-action="Index">Logout</a>
+                        <a class="item" asp-controller="Account" asp-action="Logout">Logout</a>
                     }
                     else
                     {
